# money-tracker-server

./: pyproject.toml
backend/: settings.py  urls.py
transactions/: models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
